# duckdb-retail-pipeline

./: .gitignore  README.md  pyproject.toml
analysis/: analyze_monthly_sales.py
data/raw/: gbp.xml  ukbankholidays-jul19.xls
data_exploration/: gbp_data.py  inspect_db.py  online_retail_data.py  ukbankholidays_data.py
sql/views/: monthly_sales_summary.sql
src/: run.py
src/ingestion/: __init__.py  fx_data.py  holidays_data.py  retail_data.py
src/models/: __init__.py  dimensions.py  facts.py
