[project]
name = "duckdb-retail-pipeline"
version = "0.1.0"
description = "A data pipeline for retail transaction analysis using DuckDB"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.3.2",
    "matplotlib>=3.10.6",
    "openpyxl>=3.1.5",
    "pandas>=2.3.2",
    "seaborn>=0.13.2",
    "xlrd>=2.0.2",
]
